--- a/ejs-neu/views/pages/main.ejs
+++ b/ejs-neu/views/pages/main.ejs
@@ -12,19 +12,12 @@
 				method: "GET",
 				success: function(data){
 					console.log(data);
-					for(i = 0; i < data.length; i++){
-						var name = data[i].name;
-						var adress = data[i].adress;
-						var port = data[i].port;
-						createGadgetEntry(name, adress, port);
-					}
 				},
 				error: function(data){
 					console.log(data);
 				}
 			});
 		});
-		
 
 
 		function onCreateGadget(){
@@ -49,14 +42,13 @@
 					port
 				},
 				success: function(data){
+					console.log(data);
 					$("#createModal").modal("hide");
-					
+					createGadgetEntry(name, adress, port);
 					clearInput();
-					window.location="http://localhost:8088/";
 				},
 				error: function(data){
 					console.log(data);
-					$('#gadgetName').parent('div').addClass('has-error');
 				}
 			});
 
@@ -71,14 +63,7 @@
 
 		}
 		function createGadgetEntry(name, ip, port){
-
-
-			var panel = '<div class="panel panel-primary" id='+name+'><div class="panel-heading"><h2 class="panel-title">'+name +'</h2><button class="btn btn-xs btn-default pull-right" ><span class="glyphicon glyphicon-remove"></span></button></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
-			var test = "'"+name+"'";
-			var element = document.getElementById(test);
-
 			var panel = '<div class="panel panel-primary"><div class="panel-heading"><h2 class="panel-title">'+name +'</h2><button class="btn btn-xs btn-default pull-right"><span class="glyphicon glyphicon-remove"></span></button></div><div class="panel-body"><b><p>IP-Adresse: </b>'+ip+'</p><P><b>Port: </b>'+port+'</p></div><div class="panel-footer clearfix"><button class="btn btn-xs btn-primary pull-left"><span class="glyphicon glyphicon-console"></span>HTTP Request</button></div></div>';
-
 
 			if(count % 2 == 0){
 				$("#col1").prepend(panel);
@@ -111,6 +96,10 @@
 
 
 
+		$(document).click(function(event){
+			console.log(event.target.id);
+		});
+
 		function onLogout(){
 			$.ajax({
 				url: "http://localhost:8088/api/v1/users/logout",
@@ -125,12 +114,8 @@
 				}
 			});
 		}
-
-		
-
-
-</script>
-
+	
+	</script>
 </head>
 <body >
 
@@ -140,12 +125,8 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-sm-2"></div>
-
-			<div class="col-sm-8" id="colGadget">
-				
-
-
-
+			<div class="col-sm-8">
+				<main>
 				<div class="col-sm-6" id="col1">
 
 				</div>
